@@ -111,6 +111,9 @@ class SpecialBotPasswords extends FormSpecialPage {
 					'type' => 'check',
 					'label-message' => 'botpasswords-label-resetpassword',
 				];
+				if ( $this->botPassword->isInvalid() ) {
+					$fields['resetPassword']['default'] = true;
+				}
 			}
 
 			$lang = $this->getLanguage();
@@ -157,22 +160,39 @@ class SpecialBotPasswords extends FormSpecialPage {
 
 		} else {
 			$linkRenderer = $this->getLinkRenderer();
+			$passwordFactory = new PasswordFactory();
+			$passwordFactory->init( $this->getConfig() );
+
 			$dbr = BotPassword::getDB( DB_REPLICA );
 			$res = $dbr->select(
 				'bot_passwords',
-				[ 'bp_app_id' ],
+				[ 'bp_app_id', 'bp_password' ],
 				[ 'bp_user' => $this->userId ],
 				__METHOD__
 			);
 			foreach ( $res as $row ) {
+				try {
+					$password = $passwordFactory->newFromCiphertext( $row->bp_password );
+					$passwordInvalid = $password instanceof InvalidPassword;
+					unset( $password );
+				} catch ( PasswordError $ex ) {
+					$passwordInvalid = true;
+				}
+
+				$text = $linkRenderer->makeKnownLink(
+					$this->getPageTitle( $row->bp_app_id ),
+					$row->bp_app_id
+				);
+				if ( $passwordInvalid ) {
+					$text .= $this->msg( 'word-separator' )->escaped()
+						. $this->msg( 'botpasswords-label-needsreset' )->parse();
+				}
+
 				$fields[] = [
 					'section' => 'existing',
 					'type' => 'info',
 					'raw' => true,
-					'default' => $linkRenderer->makeKnownLink(
-						$this->getPageTitle( $row->bp_app_id ),
-						$row->bp_app_id
-					),
+					'default' => $text,
 				];
 			}
 
