@@ -536,6 +536,7 @@
 	"botpasswords-existing": "Existing bot passwords",
 	"botpasswords-createnew": "Create a new bot password",
 	"botpasswords-editexisting": "Edit an existing bot password",
+	"botpasswords-label-needsreset": "(password needs reset)",
 	"botpasswords-label-appid": "Bot name:",
 	"botpasswords-label-create": "Create",
 	"botpasswords-label-update": "Update",
@@ -559,6 +560,7 @@
 	"botpasswords-restriction-failed": "Bot password restrictions prevent this login.",
 	"botpasswords-invalid-name": "The username specified does not contain the bot password separator (\"$1\").",
 	"botpasswords-not-exist": "User \"$1\" does not have a bot password named \"$2\".",
+	"botpasswords-needs-reset": "The bot password for bot name \"$2\" of {{GENDER:$1|user}} \"$1\" must be reset.",
 	"resetpass_forbidden": "Passwords cannot be changed",
 	"resetpass_forbidden-reason": "Passwords cannot be changed: $1",
 	"resetpass-no-info": "You must be logged in to access this page directly.",
