@@ -728,6 +728,7 @@
 	"botpasswords-existing": "Form section label for the part of the form listing the user's existing bot passwords.",
 	"botpasswords-createnew": "Form section label for the part of the form related to creating a new bot password.",
 	"botpasswords-editexisting": "Form section label for the part of the form related to editing an existing bot password.",
+	"botpasswords-label-needsreset": "Indicator for when an existing bot password is invalid and needs to be reset.",
 	"botpasswords-label-appid": "Form field label for the \"bot name\", internally known as the \"application ID\".",
 	"botpasswords-label-create": "Button label for the button to create a new bot password.\n{{Identical|Create}}",
 	"botpasswords-label-update": "Button label for the button to save changes to a bot password.\n{{Identical|Update}}",
@@ -751,6 +752,7 @@
 	"botpasswords-restriction-failed": "Error message when login is rejected because the configured restrictions were not satisfied.",
 	"botpasswords-invalid-name": "Error message when a username lacking the separator character is passed to BotPassword. Parameters:\n* $1 - The separator character.",
 	"botpasswords-not-exist": "Error message when a username exists but does not a bot password for the given \"bot name\". Parameters:\n* $1 - username\n* $2 - bot name",
+	"botpasswords-needs-reset": "Error message when a bot password exists but needs to be reset. Parameters:\n* $1 - username\n* $2 - bot name",
 	"resetpass_forbidden": "Used as error message in changing password. Maybe the external auth plugin won't allow local password changes.",
 	"resetpass_forbidden-reason": "Like {{msg-mw|resetpass_forbidden}} but the auth provider gave a reason.\n\nParameters:\n* $1 - reason given by auth provider",
 	"resetpass-no-info": "Error message for [[Special:ChangePassword]].\n\nParameters:\n* $1 (unused) - a link to [[Special:UserLogin]] with {{msg-mw|loginreqlink}} as link description",
